overflow fixes

--- a/src/components/DailyCaloriesForm/DailyCaloriesForm.module.css
+++ b/src/components/DailyCaloriesForm/DailyCaloriesForm.module.css
@@ -187,3 +187,7 @@
     background-color: white;
   }
 }
+
+.hidden {
+  overflow: hidden;
+}
